tests/neg/i7751.scala
import language.experimental.fewerBraces
val a = Some(a=a,)=> // error // error
val a = Some(x=y,)=>
